--- a/src/ExperimentServer.csproj
+++ b/src/ExperimentServer.csproj
@@ -8,10 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="FastMember" Version="1.5.0" />
+    <PackageReference Include="MathNet.Numerics" Version="6.0.0-beta2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.14" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
-    <PackageReference Include="Radzen.Blazor" Version="6.2.9" />
+    <PackageReference Include="Radzen.Blazor" Version="6.3.1" />
   </ItemGroup>
 
 </Project>
